--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
     </noscript>
     <div class="container" id="app"></div>
     <!-- built files will be auto injected -->
-    
+    <script src="http://localhost:6001/socket.io/socket.io.js"></script>
   </body>
 </html>
