--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     </noscript>
     <div class="container" id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="http://localhost:6001/socket.io/socket.io.js"></script>
+    <!-- product env -->
+    <script src="http://game.g-learning.click:6001/socket.io/socket.io.js"></script>
+    <!-- dev env -->
+    <!-- <script src="http://localhost:6001/socket.io/socket.io.js"></script> -->
   </body>
 </html>
