--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
     <!-- built files will be auto injected -->
 
     <!-- product env -->
-    <script src="http://game.g-learning.click:6001/socket.io/socket.io.js"></script>
+    <!-- <script src="http://game.g-learning.click:6001/socket.io/socket.io.js"></script> -->
+
+    <!-- product with pass proxy -->
+    <script src="http://game.g-learning.click/socket.io/socket.io.js"></script>
     
     <!-- dev env -->
     <!-- <script src="http://localhost:6001/socket.io/socket.io.js"></script> -->
