--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
     <!-- <script src="http://game.g-learning.click:6001/socket.io/socket.io.js"></script> -->
 
     <!-- product with pass proxy -->
-    <script src="http://game.g-learning.click/socket.io/socket.io.js"></script>
+    <!-- <script src="http://game.g-learning.click/socket.io/socket.io.js"></script> -->
+
+    <script src="https://game.g-learning.click/socket.io/socket.io.js"></script>
     
     <!-- dev env -->
     <!-- <script src="http://localhost:6001/socket.io/socket.io.js"></script> -->
