redirect if user try to open rom by url

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,10 @@
     <div class="container" id="app"></div>
     <!-- built files will be auto injected -->
 
-    <!-- product env -->
-    <!-- <script src="http://game.g-learning.click:6001/socket.io/socket.io.js"></script> -->
-
     <!-- product with pass proxy -->
     <script src="https://game.g-learning.click/socket.io/socket.io.js"></script>
 
     <!-- dev env -->
-    <!-- <script src="http://localhost:6001/socket.io/socket.io.js"></script> -->
+    <!-- <script src="http://localhost/socket.io/socket.io.js"></script> -->
   </body>
 </html>
