--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         continue.</strong
       >
     </noscript>
-    <div class="container" id="app"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
 
     <!-- product with pass proxy -->
