feat: done footer

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
     <!-- built files will be auto injected -->
 
     <!-- product with pass proxy -->
-    <script src="https://game.g-learning.click/socket.io/socket.io.js"></script>
+    <!-- <script src="https://game.g-learning.click/socket.io/socket.io.js"></script> -->
 
     <!-- dev env -->
-    <!-- <script src="http://localhost/socket.io/socket.io.js"></script> -->
+    <script src="http://localhost/socket.io/socket.io.js"></script>
   </body>
 </html>
